Get data from API and stroes it in object
Functions to manage data, plus basic css and html

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather App</title>
   </head>
-  <body></body>
+  <body>
+    <form method="post" action="">
+      <label for="location">
+        <input id="location" type="text" required>
+      </label>
+      <input id="submit-button" type="submit">
+    </form>
+    <div class="location-date">
+      <div class="location">filler</div>
+      <div class="date">filler</div>
+    </div>
+    <div class="today-main">
+      <div class="left today">
+        <div class="temp">filler</div>
+        <div class="condition">filler</div>
+      </div>
+      <div class="right today">
+        <div class="temp-label">MAX</div>
+        <div class="max-temp">filler</div>
+        <div class="temp-label">MIN</div>
+        <div class="min-temp">filler</div>
+        <div class="feelslike">filler</div>
+      </div>
+    </div>
+    <div class="today-lower">
+      <div class="lower">filler</div>
+      <div class="lower">filler</div>
+      <div class="lower">filler</div>
+      <div class="lower">filler</div>
+      <div class="lower">filler</div>
+      <div class="lower">filler</div>
+    </div>
+    <div class="forecast">
+    </div>
+  </body>
 </html>
