Add fillMain.js to populate main section

--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@
       <div class="date">filler</div>
     </div>
     <div class="today-main">
-      <div class="left today">
+      <div class="left-today">
         <div class="temp">filler</div>
         <div class="condition">filler</div>
       </div>
-      <div class="right today">
+      <div class="right-today">
         <div class="temp-label">MAX</div>
         <div class="max-temp">filler</div>
         <div class="temp-label">MIN</div>
