Add function to fill lower section

--- a/src/index.html
+++ b/src/index.html
@@ -30,12 +30,30 @@
       </div>
     </div>
     <div class="today-lower">
-      <div class="lower">filler</div>
-      <div class="lower">filler</div>
-      <div class="lower">filler</div>
-      <div class="lower">filler</div>
-      <div class="lower">filler</div>
-      <div class="lower">filler</div>
+      <div class="sunrise-article">
+        <div class="lower-label">Sunrise</div>
+        <div class="sunrise">filler</div>
+      </div>
+      <div class="sunset-article">
+        <div class="lower-label">Sunset</div>
+        <div class="sunset">filler</div>
+      </div>
+      <div class="rain-article">
+        <div class="lower-label">Chance of Rain</div>
+        <div class="chance-rain">filler</div>
+      </div>
+      <div class="humidity-article">
+        <div class="lower-label">Humidity</div>
+        <div class="humidity">filler</div>
+      </div>     
+      <div class="wind-article">
+        <div class="lower-label">Wind</div>
+        <div class="wind">filler</div>
+      </div>
+      <div class="uv-article">
+        <div class="lower-label">UV</div>
+        <div class="uv">filler</div>
+      </div>  
     </div>
     <div class="forecast">
     </div>
